[package]
name = "weid"
version = "0.1.0"
authors = ["Kazuto Fukuchi"]
edition = "2018"

[dependencies]
futures = "0.1.25"
actix = "0.7"
actix-web = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
data-url = "0.1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
toml = "0.4"
log = "0.4"
simplelog = "0.5"
num_cpus = "1.8"
failure = "0.1"
lmdb-zero = "0.4"
