[package]
name = "weid"
version = "0.1.0"
authors = ["Kazuto Fukuchi"]
edition = "2018"

[profile.dev]
opt-level = 0

[dependencies]
futures = "0.1.27"
actix = "0.8"
actix-web = "1.0.2"
actix-files = "0.1.2"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
data-url = "0.1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
toml = "0.5.1"
log = "0.4.6"
simplelog = "0.6.0"
num_cpus = "1.10.1"
failure = "0.1.5"
lmdb-zero = "0.4.4"
