[package]
name = "weid"
version = "0.1.0"
authors = ["Kazuto Fukuchi"]
edition = "2018"

[profile.dev]
opt-level = 0

[dependencies]
futures = "0.1.28"
actix = "0.8.3"
actix-web = "1.0.3"
actix-files = "0.1.3"
actix-multipart = "0.1.2"
serde = "1.0.94"
serde_json = "1.0.40"
serde_derive = "1.0.94"
toml = "0.5.1"
log = "0.4.6"
simplelog = "0.6.0"
num_cpus = "1.10.1"
failure = "0.1.5"
lmdb-zero = "0.4.4"
tempfile = "3.1.0"
memmap = "0.7.0"

[dev-dependencies]
rand = "0.7.0"